# C_Projetos

./: .gitignore  README.md
Cs50_2026/: adivinha  adivinha.c  adivinhacao  adivinhacao.c
Cs50_2026/src0/: Oscartime - 0 (Malan).sb3  Oscartime - 1 (Malan).sb3  Oscartime - 4 (Malan).sb3  Oscartime - 5 (Malan).sb3
Cs50_2026/src1/: agree1.c  calculator0.c  calculator1.c  calculator2.c  calculator5.c  calculator7.c  cat10.c  cat7.c  cat8.c  cat9.c
Cs50_2026/src2/: buggy0.c  buggy2.c  string2.c
Cs50_2026/src6/1/: agree2
Cs50_2026/src6/3/: phonebook0.py  phonebook2.py  phonebook3.py
Cs50_2026/src6/4/: phonebook2.py
Cs50_2026/src6/6/cow/: cow0.py
Projetos_C/: CMakeLists.txt  Criando a própria biblioteca.txt  adivinhacao.c  aritmetica.c  aritmetica.h  aula3  aula3.c  aula4  aula4.c  calculadora  calculadora.c  data_hora  data_hora.c  debug.c  main.c  main2  main2.c  teste  teste.c
Projetos_C/Cs50_2026/: Cs50
Projetos_C/Cs50_2026/src0/: Oscartime - 2 (Malan).sb3  Oscartime - 3 (Malan).sb3
Projetos_C/Cs50_2026/src1/: agree0  calculator6.c  cat13.c  cat6.c
Projetos_C/Cs50_2026/src2/: buggy1.c
Projetos_C/Cs50_2026/src3/: phonebook0.c  phonebook1.c
Projetos_C/Cs50_2026/src4/: cp.c  phonebook1.c
Projetos_C/Cs50_2026/src6/1/: agree0.py  agree1.py  agree2.c  agree2.py  calculator0  mario1.c
Projetos_C/Cs50_2026/src6/3/: phonebook1.py  phonebook4.py
Projetos_C/Cs50_2026/src6/4/: phonebook.csv
