cmake_minimum_required(VERSION 4.1)
project(C C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(C
        adivinhacao.c
        aritmetica.c
        aritmetica.h
        aula3.c
        aula4.c
        calculadora.c
        data_hora.c
        debug.c
        main.c
        main2.c)
